fixed unicode on ie8

--- a/core-bc/modules/theme/src/main/webapp/css/partials/molecules/_recommended-drugs.scss
+++ b/core-bc/modules/theme/src/main/webapp/css/partials/molecules/_recommended-drugs.scss
@@ -68,6 +68,12 @@
 	color: $details-replaceable-color;
 }
 
+.lt-ie9 {
+	.replaceable {
+		font-family: Lucida Sans Unicode, Arial Unicode MS, Arial;
+	}
+}
+
 
 
 
